feat: support multiple landing servers and redesign app workspace
